# doosan

1주차/: 초안 발표_.pptx
1주차/project_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
1주차/project_ws/src/order_msgs/: CMakeLists.txt  package.xml
1주차/project_ws/src/turtlebot/: setup.py
1주차/project_ws/src/turtlebot/turtlebot/: asdfasdf.py  menu1_gui.py  menu3_gui.py  menu4_gui.py  menu5_gui.py  menu8_gui.py  order_list.py  robot_gui.py
2주차/: week2.py
3주차/D-2_sports_stacking/: D-2_sports_stacking.py
4주차/baby_ws/: map.pgm  map.yaml  카메라에 잡히는 아기 범위 예상  터틀봇 좌표
4주차/baby_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
4주차/baby_ws/src/bossbaby/: package.xml  setup.cfg  setup.py
5주차/multitb_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
5주차/multitb_ws/src/get_data/: package.xml  setup.py
6주차/ff_ws/: control_tower.ui  openmanipulator_sub.URDF
6주차/ff_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
6주차/ff_ws/src/project/: package.xml  setup.py
6주차/ff_ws/src/type/: CMakeLists.txt
6주차/ff_ws/src/type/srv/: StartTime.srv
7주차/: cam_test.py  cam_test2.py
7주차/ros_ws/install/: local_setup.sh  setup.sh
7주차/ros_ws/src/cleaning/: package.xml  setup.cfg  setup.py
8주차/ai_1/.gradio/flagged/: dataset1.csv
8주차/ai_1/vision-ai-inference-practice/: PICO_CHECK.db  missing_count.py  test.py
8주차/ai_1/vision-ai-inference-practice/1. vision-ai-inference/: video-ai-inference-practice.ipynb
8주차/ai_1/vision-ai-inference-practice/3. yolov8-inference/: yolov8-inference-practice-person-count.ipynb
8주차/ai_1/vision-ai-inference-practice/5. conveyor-system/: conveyor-system-practice.py  create_database.ipynb  defect_analysis_charts.py  example.db  insert_data.ipynb  read_database.ipynb
8주차/ai_1/vision-ai-inference-practice/gradio-demos_2/: app.py  app2.py
8주차/ai_1/vision-ai-inference-practice/python-basic_0/: python_dictionary_tutorial.ipynb  python_loops_tutorial.ipynb
8주차/ai_1/vision-ai-inference-practice/video-ai-inference_4/: video-ai-inference-practice.ipynb
8주차/ai_1/vision-ai-inference-practice/yolov8-inference_3/: yolov8-inference-practice.ipynb
(+177 files in other folders)
